--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prd-middleware",
   "version": "1.0.0",
   "description": "A middleware solution for a subset of the PRD data. Data courtesy of http://www.pathfindercommunity.net/home/databases.",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "start": "node -r esm src/server.js"
   },
@@ -11,16 +11,14 @@
   "author": "Dymion Fritz",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
+    "apollo-server": "^2.6.9",
     "esm": "^3.2.25",
-    "express": "^4.16.4",
-    "express-graphql": "^0.8.0",
-    "graphql": "^14.0.2",
-    "mongoose": "^5.3.5",
-    "rimraf": "^2.6.2",
+    "graphql": "^14.4.2",
+    "graphql-tools": "^4.0.5",
     "xlsx": "^0.13.2"
   },
   "prd_options": {
+    "verbose": false,
     "cors_whitelist": [
       "http://localhost:4200"
     ]
